# Voyager-Backend

./: .dockerignore  .drone.yml  .editorconfig  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  bacon.toml  build.gradle.kts  compose.yml  config-test.yml  gradle.properties  settings.gradle.kts  sonar-project.properties
.github/workflows/: actions.yml
Mongo/: .gitignore
Traefik/: .env.example  .gitignore  acme.json  dynamic.yml  traefik.yml
Traefik/configs/: dynamic.yml
gradle/wrapper/: gradle-wrapper.properties
guides/: CLOUDFLARE.md
guides/cloudflare/: CLOUDFLARE.md
src/: main.rs
src/business/: db_context.rs  mod.rs
src/business/repositories/: deployments.rs  mod.rs
src/business/services/: deployments.rs  deployments_ref.rs  mod.rs  new_deployment.rs
src/configs/: environment.rs
src/controllers/: mod.rs
src/controllers/deployments/: create.rs  delete.rs  get.rs  get_logs.rs  list.rs  mod.rs
src/main/resources/: logback.xml  redis-schema.txt
src/modules/: mod.rs
src/modules/cloudflare/: add_dns_record.rs  cloudflare_responses.rs  delete_dns_record.rs  mod.rs  remove_dns_record.rs
src/modules/discord/: mod.rs  send_deployment_message.rs
src/modules/docker/: build_image.rs  client.rs  create_and_start_container.rs  create_container.rs  delete_container.rs  delete_image.rs  find_internal_port.rs  get_internal_port.rs  get_logs.rs  is_container_running.rs  (+5 more)
src/types/: mod.rs  to_json_str.rs
src/utils/: expect_error.rs  gen_traefik_labels.rs  get_free_port.rs  mod.rs  result_ex.rs  runtime_helpers.rs
(+108 files in other folders)
